select number of players in menu, fix bug where jump applied to all cars, show controls for players

--- a/src/static/the.css
+++ b/src/static/the.css
@@ -94,6 +94,9 @@ p {
   margin: 6px 0;
   font-size: 14px;
 }
+.controls-row:hover {
+  background-color: #fafafa;
+}
 
 .btn-row {
   display: flex;
